--- a/app/Makefile
+++ b/app/Makefile
@@ -54,6 +54,7 @@ CSTD		?= -std=c99
 # Source files
 
 OBJS		+= $(SRC_DIR)/$(BINARY).o
+OBJS		+= $(SRC_DIR)/bootloader.o
 OBJS		+= $(SRC_DIR)/core/system.o
 OBJS		+= $(SRC_DIR)/core/timer.o
 
