--- a/bootloader/Makefile
+++ b/bootloader/Makefile
@@ -4,9 +4,11 @@ Q		:= @
 NULL		:= 2>/dev/null
 endif
 
-SRC_DIR     = src
-INC_DIR     = inc
-OPENCM3_DIR = ../libopencm3
+SRC_DIR     	 = src
+INC_DIR     	 = inc
+SHARED_SRC_DIR = ../shared/src
+SHARED_INC_DIR = ../shared/inc
+OPENCM3_DIR 	 = ../libopencm3
 
 BINARY = bootloader
 
@@ -30,6 +32,7 @@ LDFLAGS		+= -L$(OPENCM3_DIR)/lib
 
 DEFS		+= -I$(OPENCM3_DIR)/include
 DEFS		+= -I$(INC_DIR)
+DEFS		+= -I$(SHARED_INC_DIR)
 
 ###############################################################################
 # Executables
@@ -54,6 +57,10 @@ CSTD		?= -std=c99
 # Source files
 
 OBJS		+= $(SRC_DIR)/$(BINARY).o
+OBJS		+= $(SRC_DIR)/comms.o
+OBJS		+= $(SHARED_SRC_DIR)/core/uart.o
+OBJS		+= $(SHARED_SRC_DIR)/core/crc8.o
+OBJS		+= $(SHARED_SRC_DIR)/core/ring-buffer.o
 
 ###############################################################################
 # C flags
