fix typescript environment

--- a/fw_updater/package.json
+++ b/fw_updater/package.json
@@ -1,8 +1,6 @@
 {
-  "devDependencies": {
-    "typescript": "^5.9.2"
-  },
   "dependencies": {
     "serialport": "^13.0.0"
-  }
+  },
+  "type": "module"
 }
